# verticals

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CLAUDE.md  PROMPT-LOOP-VERTICALES.md  README.md  STATUS.md  biome.json  commitlint.config.cjs  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: main.yml  pr.yml
.husky/: pre-commit
apps/api/: Dockerfile  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/pos-desktop/: README.md  package.json
apps/pos-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/pos-desktop/src-tauri/migrations/: 001_sync_local.sql
apps/pos-desktop/src-tauri/src/: main.rs
apps/pos-pwa/: README.md  next.config.mjs  package.json
apps/print-bridge/: .gitignore  Cargo.toml  README.md
apps/print-bridge/src/: main.rs  types.rs
apps/web-admin/: Dockerfile  README.md  package.json  tailwind.config.ts  vite.config.ts
apps/web-b2b/: .gitignore  Dockerfile  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web-clinical/: Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/web-doctoralia/: Dockerfile  index.html  package.json
apps/web-paciente/: Dockerfile  (+2 more)
deploy/: nginx-spa.conf  nginx-spa.conf.template
docs/: autonomo-verticales.md  decisiones-pendientes.md  deploy-railway.md  design-system.md  dominios-custom.md  lanzamiento.md  sandbox-pagos-cfdi.md
scripts/: dev.sh
tablero-pruebas/: index.html
(+665 files in other folders)
