[package]
name = "gaespos-print-bridge"
version = "0.1.0"
description = "Sidecar nativo para impresión ESC/POS desde POS web GaesSoft"
authors = ["Gaes Solutions"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "gaespos_print_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Descomentar cuando se implemente la impresión real:
# escpos = "0.13"
# rusb = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
